game screen: header

--- a/src/pages/game.html
+++ b/src/pages/game.html
@@ -17,6 +17,11 @@
 </head>
 <body>
     <main>
+        <header>
+            <span class="player">Unknown</span>
+            <span>Timer: <span class="timer">0</span></span>
+        </header>
         <div class="grid"></div>
+    </main>
 </body>
 </html>
