fix: scroll useless

--- a/index.html
+++ b/index.html
@@ -17,20 +17,24 @@
     <title>Memory Game - Login</title>
   </head>
   <body>
-    <header>
-        <nav>
-            <img src="https://github.com/ThiagodePaulaSouza.png" alt="avatar-icon">
-            <span>@salequi_lapua<span class="blinker"></span></span>
-        </nav>
-    </header>
-    <form class="login-form">
-        <div class="login-header">
-            <img src="./src/images/brain.png" alt="">
-            <h1>Memory Game</h1>
-        </div>
-
-        <input type="text" placeholder="Name" class="login-input">
-        <button type="submit" class="login-button" disabled>Play</button>
-    </form>
+    <main>
+      <header>
+          <nav>
+            <a href="https://github.com/ThiagodePaulaSouza">
+              <img src="https://github.com/ThiagodePaulaSouza.png" alt="avatar-icon">
+              <span>@salequi_lapua<span class="blinker"></span></span>
+            </a>
+          </nav>
+      </header>
+      <form class="login-form">
+          <div class="login-header">
+              <img src="./src/images/brain.png" alt="">
+              <h1>Memory Game</h1>
+          </div>
+  
+          <input type="text" placeholder="Name" class="login-input">
+          <button type="submit" class="login-button" disabled>Play</button>
+      </form>
+    </main>
   </body>
 </html>
