--- a/src/pages/game.html
+++ b/src/pages/game.html
@@ -10,9 +10,9 @@
       href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./src/styles/reset.css" />
-    <link rel="stylesheet" href="./src/styles/game.css" />
-    <script src="./src/scripts/game.js" defer></script>
+    <link rel="stylesheet" href="../styles/reset.css" />
+    <link rel="stylesheet" href="../styles/game.css" />
+    <script src="../scripts/game.js" defer></script>
     <title>Memory Game</title>
 </head>
 <body>
