add endgame modal
bg with blur, awesome icons, home, restart, github, congratulations with your name and the time, hover in these icons

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="color-scheme" content="light dark">
+    <meta name="color-scheme" content="light dark" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -49,8 +49,17 @@
           <h1>Memory Game</h1>
         </div>
 
-        <input type="text" placeholder="Name" class="login-input" required minlength="3" maxlength="30"/>
-        <button type="submit" class="login-button" disabled>Play <i class="fa-solid fa-play fa-lg"></i></button>
+        <input
+          type="text"
+          placeholder="Name"
+          class="login-input"
+          required
+          minlength="3"
+          maxlength="16"
+        />
+        <button type="submit" class="login-button" disabled>
+          Play <i class="fa-solid fa-play fa-lg"></i>
+        </button>
       </form>
     </main>
   </body>
