--- a/src/pages/game.html
+++ b/src/pages/game.html
@@ -24,7 +24,7 @@
     <main>
       <header>
         <span class="player">Unknown</span>
-        <span>Timer: <span class="timer">0</span></span>
+        <span class="">Timer: <span class="timer">0</span></span>
       </header>
       <div class="grid"></div>
     </main>
